# ocir

./: 0.html  100.html  11PersonsWalk.html  1PersonWalk_0.html  1PersonWalk_100.html  1PersonWalk_200.html  1PersonWalk_300.html  1PersonWalk_400.html  1PersonWalk_500.html  1person_0.html  200.html  2PersonsWalk_0.html  2PersonsWalk_100.html  2PersonsWalk_200.html  2PersonsWalk_300.html  2PersonsWalk_400.html  2PersonsWalk_500.html  300.html  400.html  500.html  CMakeLists.txt  ReadMe.md  dataexp10_0.html  dataexp10_100.html  dataexp10_200.html  dataexp10_300.html  dataexp10_400.html  dataexp11_0.html  dataexp11_100.html  dataexp11_200.html  dataexp11_300.html  dataexp12_0.html  dataexp1_0.html  dataexp1_100.html  dataexp2_0.html  dataexp2_100.html  dataexp2_200.html  dataexp2_300.html  dataexp2_400.html  dataexp2_500.html  (+15 more)
Resources/libiconv-1.11/: config.status  libtool
data/: 1person.txt  2PersonsWalk.txt  dataexp1.txt  dataexp12.txt  dataexp3.txt  dataexp6.txt  expconfig.txt  log64_MLX.txt
libextendxmpp/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  PubSub.cc  PubSub.h  README.md  Stanza.cc  Stanza.h  StanzaQueue.cc  StanzaQueue.h  Transaction.cc  Transaction.h  TransactionQueue.cc  TransactionQueue.h  TransactionQueue_test  TransactionQueue_test.cc  XMPPUtils.cc  XMPPUtils.h  XMPPUtils_test  XMPPUtils_test.cc  XMPPWorker.cc  XMPPWorker.h  XMPPWorker_test  XMPPWorker_test.cc  cmake_install.cmake  vars.mk
ocir-data/data/: 11PersonsWalk.txt  1PersonWalk.txt  ExpSettings.txt  dataexp2.txt  dataexp4.txt  dataexp5.txt  room14.txt
ocir-data/mlxd/: mlxd  mlxd.c
ocir-data/ocir_graphs/: band_plot.py  bandinfo.csv  bodytemp1feet.txt  bodytemp2feet.txt  bodytemp3feet.txt  bodytemp4feet.txt  foamlog.txt  foamplot.py  std_plot.py  stdplot.py  stdrates.txt  stdvals.txt  temp_boxplot.py
otsu/: app  otsu.py  simple.cpp
src/: GridEyeReader.cpp  GridEyeReader.h  HotSpotter.cpp  OccupancyCounter.cpp  OccupancyCounter.h  XMPPInterface.cpp  XMPPInterface.h  XMPPWrapper.cpp  XMPPWrapper.h  buffer.cpp  buffer.h  mlxd.cpp  mlxd.h  params.h  params.h~
(+23 files in other folders)
